# ChangeLog for media-gfx/imagemagick
# Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.246 2007/09/22 16:45:19 wolf31o2 Exp $

  22 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
  imagemagick-6.3.5.9.ebuild:
  Stable on amd64 wrt bug #186030.

  22 Sep 2007; Raúl Porcel <armin76@gentoo.org> imagemagick-6.3.5.9.ebuild:
  alpha/ia64 stable wrt security #186030

  22 Sep 2007; Brent Baude <ranger@gentoo.org> imagemagick-6.3.5.9.ebuild:
  Marking imagemagick-6.3.5.9 ppc64 for bug 186030

  22 Sep 2007; Luca Barbato <lu_zero@gentoo.org> imagemagick-6.3.5.9.ebuild:
  Marked ppc64

  22 Sep 2007; Luca Barbato <lu_zero@gentoo.org> imagemagick-6.3.5.9.ebuild:
  Marked ppc

  22 Sep 2007; Hans de Graaff <graaff@gentoo.org>
  imagemagick-6.3.5.9.ebuild:
  Add back ~x86-fbsd keyword which got dropped for no apparent reason

  22 Sep 2007; Jeroen Roovers <jer@gentoo.org> imagemagick-6.3.5.9.ebuild:
  Stable for HPPA (bug #186030).

  21 Sep 2007; Ferris McCormick <fmccor@gentoo.org>
  imagemagick-6.3.5.9.ebuild:
  Sparc stable --- security Bug #186030 --- builds and appears to work.

  21 Sep 2007; Christian Faulhammer <opfer@gentoo.org>
  imagemagick-6.3.5.9.ebuild:
  stable x86, security bug 186030

*imagemagick-6.3.5.9 (21 Sep 2007)

  21 Sep 2007; Hans de Graaff <graaff@gentoo.org>
  +imagemagick-6.3.5.9.ebuild:
  Version bump: fixes #186030 and the 4 security bugs listed there, and bug
  #191001.

  20 Sep 2007; Petteri Räty <betelgeuse@gentoo.org>
  imagemagick-6.3.3.ebuild:
  Remove invalid WANT_AUTOCONF values. They were commented so no actual
  problem. Reported in bug #193018.

  29 Aug 2007; Joe Peterson <lavajoe@gentoo.org>
  imagemagick-6.3.4-r1.ebuild:
  Add ~x86-fbsd keyword

  26 Jun 2007; Luca Barbato <lu_zero@gentoo.org>
  imagemagick-6.3.4-r1.ebuild:
  Marked ppc

  26 Jun 2007; Markus Rothe <corsair@gentoo.org>
  imagemagick-6.3.4-r1.ebuild: