@@ -1,3 +1,6 @@
+-----BEGIN PGP SIGNED MESSAGE-----
+Hash: SHA1
+
 AUX imagemagick-6.3.0.5-configure-windows-fonts.patch 584 RMD160 363bf343b3b4deaa9772c0a2b3d79f618c36a14f SHA1 db467ddc0c056425c790eafe5c6a72d6a8a0cd98 SHA256 47b8831abce2295ddcb51965e8759f32ef1d6f910e889f059dfcc6312ec09604
 MD5 341f63fcb7d8052a356761cf6ae8d0d6 files/imagemagick-6.3.0.5-configure-windows-fonts.patch 584
 RMD160 363bf343b3b4deaa9772c0a2b3d79f618c36a14f files/imagemagick-6.3.0.5-configure-windows-fonts.patch 584
@@ -26,6 +29,7 @@ DIST ImageMagick-6.3.0-5.tar.bz2 5384739 RMD160 1e1fb1a0d3a782c63fb2f31fe575066f
 DIST ImageMagick-6.3.3-8.tar.bz2 5633820 RMD160 fe9ad987909ae1364257de54463ff1f06240f8c8 SHA1 3a8593f0b5e5458647b3bc954e477eb925672f67 SHA256 e2b557f971fa5875647ad4c848025a095eb5784a4296d884ff162212eab8db4e
 DIST ImageMagick-6.3.4-4.tar.bz2 5796376 RMD160 519126459cd80e4c07f23aa21147d579fa4b7789 SHA1 117fd8552961149992c78c045d7de191f7692bb8 SHA256 bcaac2d9d416c055642b4f92b2c8057e5fed4f8d70703e423ad19b3662b096c3
 DIST ImageMagick-6.3.4-9.tar.bz2 5813934 RMD160 cab331e23c1a49ac9db403d823fa807efbf69a40 SHA1 5869d2ee1d63b849b899637c7a39320d96022ab4 SHA256 e25eb510b156750afc099d24ba2d104d7b47fbd7d460e07463ef48b751300dde
+DIST ImageMagick-6.3.5-10.tar.bz2 7571418 RMD160 b8436a7a5ada2793177f47621d031c89753b770c SHA1 f2fb1b73895a335c553c40b705af7ea179700316 SHA256 a4d26fb438b15502cc4fb7842111d75d0bd4958c484b3d1bbe25dc60b4e63f84
 DIST ImageMagick-6.3.5-9.tar.bz2 7645732 RMD160 6d2e74a1b8de26a095c2185a8b2c21259e9fb79b SHA1 71de22d770a4cb3de94c1925a03fba6d16e71513 SHA256 60ae398533a48b9edba17f1ede68525fd6aca143aaa8b430bc4c4ece40554596
 EBUILD imagemagick-6.3.0.5-r1.ebuild 2917 RMD160 578779ef200c2bee134a452f5943f8f530d34e0c SHA1 453e9d5f28d70cd9f3725bcf930f0f1eb1fd0181 SHA256 f805ad9ba8cded46a987332f43e003bb93f248e844d7f3de1c6a38601217d589
 MD5 cc0c29c4eeb692f8ef66f4b30b934f32 imagemagick-6.3.0.5-r1.ebuild 2917
@@ -47,14 +51,18 @@ EBUILD imagemagick-6.3.4.ebuild 2696 RMD160 23b7817f3626bd18ac921e12e7a11fb10b42
 MD5 dbd5f46876726c85801df4a8b855385c imagemagick-6.3.4.ebuild 2696
 RMD160 23b7817f3626bd18ac921e12e7a11fb10b42b330 imagemagick-6.3.4.ebuild 2696
 SHA256 75fb4899acbe71cf91c91ecae9004b2438f2173a210c5210163aef250ea3ac04 imagemagick-6.3.4.ebuild 2696
+EBUILD imagemagick-6.3.5.10.ebuild 3040 RMD160 f86a54296e06454260221ff77cc66888a9e6a904 SHA1 9c9c0af784d6092d6ec382569acfb3ed133dc78d SHA256 3f8734d10ffe26eb5413d8a1e73bc8c99edc24ff41e9bca6aff7e8c7554f5464
+MD5 33ef8050893d444f4e4df6255d080594 imagemagick-6.3.5.10.ebuild 3040
+RMD160 f86a54296e06454260221ff77cc66888a9e6a904 imagemagick-6.3.5.10.ebuild 3040
+SHA256 3f8734d10ffe26eb5413d8a1e73bc8c99edc24ff41e9bca6aff7e8c7554f5464 imagemagick-6.3.5.10.ebuild 3040
 EBUILD imagemagick-6.3.5.9.ebuild 3033 RMD160 4c0aa171dca99c9e1d01551ab3f6e5855853079a SHA1 57ff0821443546d7d6498350b7d640221126591d SHA256 7e90287bd96f6331bc6856addb2d204e58a94383f636fe4d135836e7cb0eab85
 MD5 bb74fafa6cc1edcbe1784a6c10284413 imagemagick-6.3.5.9.ebuild 3033
 RMD160 4c0aa171dca99c9e1d01551ab3f6e5855853079a imagemagick-6.3.5.9.ebuild 3033
 SHA256 7e90287bd96f6331bc6856addb2d204e58a94383f636fe4d135836e7cb0eab85 imagemagick-6.3.5.9.ebuild 3033
-MISC ChangeLog 36705 RMD160 16cda46facd70c3e2d13e241bc6f8b0600c0bbab SHA1 25e091932118b50b9052334e035d0f0164400f36 SHA256 6408dd1b9392c085dd988e84ba109797dd9463818816a99da38b5ade82403457
-MD5 1d43689cf00e4235c72317a882a6b143 ChangeLog 36705
-RMD160 16cda46facd70c3e2d13e241bc6f8b0600c0bbab ChangeLog 36705
-SHA256 6408dd1b9392c085dd988e84ba109797dd9463818816a99da38b5ade82403457 ChangeLog 36705
+MISC ChangeLog 36891 RMD160 134ace9fcb1d222594bc6bca4258da67a453c24b SHA1 f21342d145e6e8a72d53d8da92d6eb0db630169e SHA256 d737ed75a2fa1ac963d017ad65f7c00004a8f6f927e48c3f4a1f1dd9bc924924
+MD5 1f3ae5c35b6ccdd8456e7f4d80e7fdfe ChangeLog 36891
+RMD160 134ace9fcb1d222594bc6bca4258da67a453c24b ChangeLog 36891
+SHA256 d737ed75a2fa1ac963d017ad65f7c00004a8f6f927e48c3f4a1f1dd9bc924924 ChangeLog 36891
 MISC metadata.xml 224 RMD160 00e125be58c08e634a6053e3d265d2f36aab18ad SHA1 07c66bc3a581bf683765507da34f69623cb94ad8 SHA256 d7920747aa57936d24496c8ee5016502a9acc8108a5b01e8d1b813813d4250b3
 MD5 3dc350be33069338fa083ca16ec11cc8 metadata.xml 224
 RMD160 00e125be58c08e634a6053e3d265d2f36aab18ad metadata.xml 224
@@ -74,6 +82,16 @@ SHA256 07a1b6968ec917c4d2b79450bd204e5494db4781db7b54f3d0ee9dd7b3094ff5 files/di
 MD5 6038d6df7238f5d3b6ea62d2023de3f6 files/digest-imagemagick-6.3.4-r1 265
 RMD160 d3e0214e401fa26364a8b337e82e1640855264d4 files/digest-imagemagick-6.3.4-r1 265
 SHA256 2233af42aa97c7ca892b91f30f721ffc6bd5b6d957f8843bd75d87f5d97d8f67 files/digest-imagemagick-6.3.4-r1 265
+MD5 ddde5b13a86b0c2736f5f76722132da5 files/digest-imagemagick-6.3.5.10 268
+RMD160 6018ddcd80e9423ef0a72a6a6827c03d97f7b55f files/digest-imagemagick-6.3.5.10 268
+SHA256 d230e31265f25994faaa2880e88b71d6efe9d4c20811ff2d824b11e9a1d3e53c files/digest-imagemagick-6.3.5.10 268
 MD5 a029dd80d92dc2c85abc7e85a8b5ed24 files/digest-imagemagick-6.3.5.9 265
 RMD160 de7050d48dfc7d040d6503ec1022863c10f27db7 files/digest-imagemagick-6.3.5.9 265
 SHA256 27a3de21571bbb60f00ce59481c5e15273f5bb6d651640fd7f8987e7d7d3ccf9 files/digest-imagemagick-6.3.5.9 265
+-----BEGIN PGP SIGNATURE-----
+Version: GnuPG v1.4.7 (GNU/Linux)
+
+iD8DBQFG+1Qa0BM77Tkv120RAgBNAJ0Vo7CvtuOPHZginK8kHPMBXq4g6wCg6hS5
+mtC5faFg2VeuPrpdM1LwK4Q=
+=DHBB
+-----END PGP SIGNATURE-----
