@@ -1,0 +1,3 @@
+MD5 1b31777138ed78ae0e95b8480cb7e2c2 ImageMagick-6.3.5-10.tar.bz2 7571418
+RMD160 b8436a7a5ada2793177f47621d031c89753b770c ImageMagick-6.3.5-10.tar.bz2 7571418
+SHA256 a4d26fb438b15502cc4fb7842111d75d0bd4958c484b3d1bbe25dc60b4e63f84 ImageMagick-6.3.5-10.tar.bz2 7571418
