@@ -1,6 +1,12 @@
 # ChangeLog for media-gfx/imagemagick
 # Copyright 1999-2007 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.246 2007/09/22 16:45:19 wolf31o2 Exp $
+# $Header: /var/cvsroot/gentoo-x86/media-gfx/imagemagick/ChangeLog,v 1.247 2007/09/27 06:56:19 graaff Exp $
+
+*imagemagick-6.3.5.10 (27 Sep 2007)
+
+  27 Sep 2007; Hans de Graaff <graaff@gentoo.org>
+  +imagemagick-6.3.5.10.ebuild:
+  Version bump: fixes some minor regressions including bug #193737.
 
   22 Sep 2007; Chris Gianelloni <wolf31o2@gentoo.org>
   imagemagick-6.3.5.9.ebuild:
